--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,7 +35,8 @@
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="@dimen/layout_margin"
         android:fontFamily="@font/roboto"
-        android:text="@string/done" />
+        android:text="@string/done"
+        />
 
     <TextView
         android:id="@+id/nickname_text"
@@ -44,7 +45,10 @@
         android:layout_height="wrap_content"
         android:textAlignment="center"
         android:visibility="gone"
-        android:text="" />
+        android:text=""
+        android:background="@color/colorAccent"
+        android:paddingBottom="@dimen/small_padding"
+        />
 
     <ImageView
         android:id="@+id/star_image"
